1998-08-15  Jochen Wiedmann  <joe@ispsoft.de> (1.2000)

	* dbd/dbd.pm.in (connect): Fixed memory leak by removing the
	  private_dbd_mysql_attr hash ref.
	* nodbd/nodbd.pm.in (FETCH): Removed support for
	  private_dbd_mysql_attr.
	* nodbd/nodbd.pm.in (DESTROY): Added DESTROY method to prevent
	  warnings for missing disconnect and/or finish.
        * INSTALL: Added a description of the missing-libgcc problem.
        * INSTALL: Added a patch for the mSQL problem with ORDER BY.
        * Fixed pointers to DBI home (was www.hermetica.com, now
          www.arcana.co.uk)
	* dbdimp.c: Added "mysql_socket=..." to the DSN.
	  My thanks to Orion Poplawski <orion@bvt.com> for this
	  patch.

1998-07-16  Jochen Wiedmann  <joe@ispsoft.de> (1.19_22)

	* dbd/dbdimp.c: Added dTHR to some more functions for 5.005
	  compatibility. Thanks to Chris Leach
	  <leachcj@vegemite.mel.az.bp.com>.
	* nodbd/statement.pm.in: Changed length to CORE::length in
	  some cases to prevent 5.005 warnings.
	* Added a section on multithrading to the manual.
	
1998-07-07  Jochen Wiedmann  <joe@ispsoft.de> (1.19_21)

	* nodbd/nodbd.pm.in (query): Fixed a missing "bless($sth, ...)".
	  My thanks to Ray Zimmermann <rz10@cornell.edu>. (Gives me
	  a familiar feeling to always meet the same people ... :-)

1998-07-06  Jochen Wiedmann  <joe@ispsoft.de> (1.19_20)

	* Makefile.lib (InitializeMsql): Added /usr to the search path
	  for mSQL headers and libraries.
	* tests/msql1.t (unctrl): Renamed "character" column to
	  "chrctr". ("character" is not a valid column name under
	  msql-2.0.4.1)
	* dbd/dbd.xs.in (DBD::mysql::ping): Now using mysql_ping().
	* dbd/dbdimp.c (_MyLogin): Added mysql_compression.

1998-06-25  Jochen Wiedmann  <joe@ispsoft.de> (1.19_19)

	* dbd/dbdimp.c: Added $sth->{mysql_type} and
	  $sth->{msql_type}, which are in fact just what
          $sth->{TYPE} used to be. $sth->{TYPE} is now
	  returning portable SQL types.
	* MANIFEST: Removed nodbd/Makefile.PL.in.