@@ -2,7 +2,7 @@
 
 package Bundle::Mysql;
 
-$VERSION = '1.2000';
+$VERSION = '1.2001';
 
 1;
 
